--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-query-devtools": "^5.91.2",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.2.0",
